--- a/style.css
+++ b/style.css
@@ -51,6 +51,28 @@ footer a {
 footer a:hover {
     color: cornflowerblue;
 }
-section article a {
-    margin: 1rem;
+section article img {
+    width: 400px;
+ }
+ .image {
+     width: 36px;
+     margin-right: 2rem;
+     margin-left: 1.8rem;
+     margin-top: 5px;
+     margin-bottom: 5px;
+ }
+ .image:hover {
+    -webkit-transform:scale(1.3);transform:scale(1.3);
+    -webkit-transition-duration: 0.3s;
+ }
+.project {
+    transition: color 0.3s ease;
+    font-weight: bold;
+    color: black;
+    margin-left: 1rem;
+    text-decoration: none;
+}
+.project:hover {
+    color: rgb(12, 15, 190);
+    animation-duration: 0.3s;
 }
